--- a/src/main/resources/i18n/messages_pt_BR.properties
+++ b/src/main/resources/i18n/messages_pt_BR.properties
@@ -7,3 +7,6 @@ exception.usuario.ja.cadastrado=Usu\u00E1rio j\u00E1 cadastrado!
 campo.senha.obrigatorio=O campo senha \u00e9 obrigat\u00f3rio.
 
 exception.proprietario.not.found=Propriet\u00E1rio n\u00E3o encontrado!
+
+exception.veiculo.not.found=Ve\u00EDculo n\u00E3o encontrado!
+
