Refatoração e escrita de testes
- Refatorados métodos de validação de usuário;
- Ajuste no schema para tornar e-mail do usuário unique;
- Ajuste em mais exceptions para lançar mensagens internacionalizaveis.

--- a/src/main/resources/i18n/messages_pt_BR.properties
+++ b/src/main/resources/i18n/messages_pt_BR.properties
@@ -5,6 +5,8 @@ exception.usuario.not.found=Usu\u00E1rio n\u00E3o encontrado!
 exception.usuario.nao.cadastrado=Usu\u00E1rio n\u00E3o cadastrado!
 exception.usuario.ja.cadastrado=Usu\u00E1rio j\u00E1 cadastrado!
 campo.senha.obrigatorio=O campo senha \u00e9 obrigat\u00f3rio.
+campo.email.obrigatorio=O campo e-mail \u00e9 obrigat\u00f3rio.
+campo.email.invalido=O campo e-mail \u00e9 inv\u00E1lido.
 
 exception.proprietario.not.found=Propriet\u00E1rio n\u00E3o encontrado!
 
